fix: fix moneybuy error message alignment

--- a/sass/themes/donate/donate-cr/components/cards/_cards.scss
+++ b/sass/themes/donate/donate-cr/components/cards/_cards.scss
@@ -66,3 +66,9 @@
     }
   }
 }
+
+.form__row--upsell {
+    background: $colour-mercury-grey;
+    text-align: center;
+    padding-bottom: 30px;
+}
